# Agents

./: .gitignore  Gemini_Live_API.ipynb  Gemini_Thinking_API.ipynb  Gemini_api_Document_underrstanding.ipynb  Gemini_api_Function_calling.ipynb  Gemini_api_Long_Context.ipynb  Gemini_api_Text_generation.ipynb  Gemini_api_structured_output.ipynb  Gemini_api_structured_output.ipynb.ipynb  PDF_report.ipynb  chat_history.json  gemini-structured-outputs-complex.ipynb  pyproject.toml
.ipynb_checkpoints/: Gemini_api_Text_generation-checkpoint.ipynb  gemini_api-checkpoint.ipynb
