[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "openai>=1.109.1",
    "pypdf>=6.1.0",
    "python-dotenv>=1.1.1",
]
